# graph_surrogate

./: .gitignore  README.md  pyproject.toml  run_train.sbatch
datasets/: __init__.py  registry.py
docs/: REPRODUCIBILITY.md  THEORETICAL_ANALYSIS.md
model/: __init__.py  baselines.py  encoder.py  hierarchical_rne.py  mdn.py  network.py  partitioning.py  structural_features.py
scripts/: ablation_study.py  benchmark_latency.py  evaluate.py  generate_figures.py  generate_tables.py  neurips_evaluation.py  rne_visualizations.py  run_experiments.py  run_rne_experiments.py  visualizations.py
tests/: test_core.py  test_local.py
training/: __init__.py  graph_loader.py  hierarchical_trainer.py  query_sampler.py  rne_evaluation.py  train.py
