[project]
name = "graph_surrogate"
version = "0.1.0"
description = "Neural network surrogate for graph aggregate queries - research evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "torch-geometric>=2.4.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
train = "training.train:main"
train-gnn = "training.train_gnn:main"
evaluate = "scripts.evaluate:main"
visualize = "scripts.visualizations:main"
download-dataset = "datasets.registry:main"
run-experiments = "scripts.run_experiments:main"
compare-models = "scripts.compare_models:main"
neurips-study = "scripts.neurips_study:main"
neurips-extended = "scripts.neurips_extended:main"
optimizer-demo = "scripts.optimizer_integration:demo_optimization"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["training", "model", "datasets", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
