[project]
name = "graph_surrogate"
version = "0.1.0"
description = "Neural network surrogate for graph aggregate queries - research evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "networkx>=3.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
train = "training.train:main"
evaluate = "scripts.evaluate:main"
visualize = "scripts.visualizations:main"
download-dataset = "datasets.registry:main"
run-experiments = "scripts.run_experiments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["training", "model", "datasets", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
